--- a/package.json
+++ b/package.json
@@ -12,20 +12,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
-    "@types/express": "^5.0.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "pg": "^8.16.3",
-    "zod": "^4.1.13"
+  "@prisma/client": "6.19.0",
+  "@types/express": "^5.0.5",
+  "bcrypt-ts": "^7.1.0",
+  "dotenv": "^17.2.3",
+  "express": "^5.1.0",
+  "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
-    "@types/pg": "^8.15.6",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
