--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "@prisma/client": "6.19.0",
-  "@types/express": "^5.0.5",
-  "bcrypt-ts": "^7.1.0",
-  "dotenv": "^17.2.3",
-  "express": "^5.1.0",
-  "zod": "^4.1.13"
+    "@prisma/client": "6.19.0",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt-ts": "^7.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
